(PC-42612)[PRO] fix: ui misalignment in FormLayout.Row

--- a/pro/src/components/FormLayout/FormLayout.module.scss
+++ b/pro/src/components/FormLayout/FormLayout.module.scss
@@ -93,6 +93,7 @@ $info-box-margin-left: rem.torem(24px);
 
     &.inline-group {
       display: flex;
+      align-items: start;
       flex-flow: row wrap;
       flex-direction: row;
       gap: var(--size-spacing-l);
